crates/cypher-plan/tests/snapshots/serde_pretty__pretty_aggregate.snap
---
source: crates/cypher-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
Aggregate keys=[$0] aggs=[count(DISTINCT $0)]
  Source (AS $0)
