crates/cypher-plan/tests/snapshots/serde_pretty__pretty_filter_project.snap
---
source: crates/cypher-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
Project [$0.name AS name]
  Filter (($0.age > 18))
    Source (:Person AS $0)
