crates/cypher-plan/tests/snapshots/serde_pretty__pretty_optional_join.snap
---
source: crates/cypher-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
OptionalJoin
  Source (:Person AS $0)
  Source (:Post AS $1)
