crates/cypher-plan/tests/snapshots/serde_pretty__pretty_source_label.snap
---
source: crates/cypher-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
Source (:Person AS $0)
