crates/cypher-plan/tests/snapshots/serde_pretty__pretty_union_distinct.snap
---
source: crates/cypher-plan/tests/serde_pretty.rs
expression: pretty(&plan)
---
Union DISTINCT
  Project [$0 AS n]
    Source (:Person AS $0)
  Project [$1 AS n]
    Source (:Robot AS $1)
